change trim.isEmpty to blank